tests/compile-fail/injectable_no_default.stderr
error[E0599]: no function or associated item named `default` found for struct `Foo` in the current scope
  --> $DIR/injectable_no_default.rs:35:1
   |
19 | pub struct Foo {}
   | -------------- function or associated item `default` not found for this
...
35 | test_epilogue!();
   | ^^^^^^^^^^^^^^^^^ function or associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `default`, perhaps you need to implement it:
           candidate #1: `Default`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
